- Bugfix: StackDockStation did not fire dockable-selected event properly when using the DefaultStackDockComponent
! API: BaseTabComponent is no longer responsible for keeping icon and text up to date, this must be handled by the StackDockComponent. This means that the EclipseTheme now respects the text and icon set by the StackDockStation.
- Bugfix: Tabs with unequal height were positioned strangely
- Bugfix: Popup menus are now enabled for tabs on a DefaultStackDockComponent
- API: A StackDockStation with only one child can still show a tab depending on the type of StackDockComponent
- API: ScreenDockStation now supports fullscreen mode for its children. What "fullscreen" means can be influenced by a ScreenDockFullscreenStrategy.
- Bugfix: If DockRegister was stalled and a DockStation was added/removed to the register and later Dockables added/removed from that station, then the DockRegister could miss these modifications and store too many/few Dockables.
- Bugfix: CActionSource did not fire events when removing or replacing actions
- Bugfix: CLocationModeManager#setLocation(Dockable,ExtendedMode,CLocation) did not compare the correct objects and has always thrown an exception
- Bugfix: Minimized CDockables did not appear at the correct location if corner components were used
- Bugfix: Dragging a maximized CDockable could throw an exception
- Bugfix: Dragging a tab from a BasicStackDockComponent could throw an exception
- Bugfix: Path did not encode non-java identifiers right.
- API: EclipseDockableDisplayer now also respects TabContentFilter
! API: TabContentFilter has additional methods dealing with StackDockComponents. StackDockStationFilterListener renamed to TabContentFilter.
- Bugfix: EclipseMenu did not update its icon automatically
- Bugfix: StackDockStation.move(Dockable,DockableProperty) could throw exception if destination index was too big