@@ -307,3 +307,4 @@
 ! API: TabContentFilter has additional methods dealing with StackDockComponents. StackDockStationFilterListener renamed to TabContentFilter.
 - Bugfix: EclipseMenu did not update its icon automatically
 - Bugfix: StackDockStation.move(Dockable,DockableProperty) could throw exception if destination index was too big
+- Bugfix: AbstractScreenDockWindow.setDockable did call updateTitleIcon instead of updateTitleText
